# okareo-python-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  build_docs_postprocess.py  index.html  mkdocs.yml  my_test_scenario_set.jsonl  objects.inv  openapi.json  pyproject.toml  run_sh.sh  scenario.jsonl  setup.cfg  test_runs.patch
.github/actions/python-poetry-env/: action.yml
.github/workflows/: dependencies.yml  draft_release.yml  release.yml  test.yml  verify_spec.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md  build_docs.sh  build_docs_postprocess.py
examples/: __main__.py  allure_multi_run_example.py  allure_reporter_example.py  autogen_logger_example.ipynb  ben_run_contraction.ipynb  ben_run_misspelling.ipynb  blog_generate_hg_data.ipynb  blog_generating_test_scenarios.ipynb  blog_generating_training_scenarios.ipynb  blog_training_base.ipynb  blog_training_w_syn.ipynb  checks.ipynb  classification_eval.ipynb  classification_eval_training.ipynb  classification_eval_w_model.ipynb  classification_eval_with_OpenAI.ipynb  classification_finetuning_eval_part1.ipynb  classification_finetuning_eval_part2.ipynb  classification_template.ipynb  crewai_logging_example.ipynb  data_quality_checks_demo.ipynb  embedding_comparison.ipynb  example.ipynb  generate_retrieval_scenario.ipynb  generated_scenarios_walkthrough.ipynb  generating_classification_scenarios.ipynb  generating_contraction_scenarios.ipynb  generating_misspelling_scenarios.ipynb  generating_scenarios.ipynb  generation.ipynb  generation_eval.ipynb  hello_world_rag_test.ipynb  langchain.py  language_generation_example.ipynb  litellm_logger_callback_example.ipynb  model_data_points.ipynb  qa_eval_custom_check.ipynb  rag_test.ipynb  retrieval_embedding_finetuning_eval.ipynb  retrieval_eval copy 2.ipynb  (+25 more)
examples/autogen/: autogen_logger_example.ipynb
examples/blog_data/: cond.csv  contr.csv  rephrased.csv  spelling.csv  testing.csv  training.csv
examples/blog_model_base/: config.json
examples/e5/16fb6870-6905-4371-a642-c812dd19bf6e/: index_metadata.pickle
examples/finetuning/: utils.py  webbizz_finetuning_test_data.jsonl  webbizz_finetuning_train_data.jsonl
examples/generating_scenarios/: conditional.ipynb  contractions.ipynb  rephrasing.ipynb  reverse_question.ipynb
examples/generating_scenarios/data/: games_desc.csv
okareo_tests/: account_creation.py  check_error_raise.py  check_tool_call.py  common.py  conftest.py  json_scenario.jsonl  sample_check.py  test_audio_file_upload.py  test_augmentations.py  test_auth_admin_e2e.py  test_autogen_logger.py  test_check_versioning.py  test_checks.py  test_checks_extended.py  test_client.py  test_code_check_config.py  test_compare_test_runs.py  test_conversation_ingestion_e2e.py  test_crewai_logger.py  test_dialog_scenario.py  test_generation_model.py  test_get_data_points.py  test_integration_checks.py  test_integration_model_under_test.py  test_integration_multiturn.py  test_json_scenario.py  test_langchain.py  test_litellm_logger.py  test_model_invocation.py  test_model_under_test.py  test_model_under_test_async.py  test_phone_target.py  test_projects.py  test_re_evaluate_integration.py  test_register_model.py  test_reporter.py  test_retrieval.py  test_run_errors.py  test_run_multiturn_errors.py  test_run_scenario_errors.py  (+22 more)
okareo_tests/audio/: call_times_transcript.json
okareo_tests/checks/: code_check_no_type.py  code_check_pass_fail.py  code_check_score.py  function_call_ast_validator.py  input_comparison_check.py  invalid_os_check.py  malicious_check.py  metadata_check.py  model_input_check.py  model_output_check.py  sample_check.py  sample_check_with_explanation.py  scenario_input_check.py  scenario_result_check.py
okareo_tests/datasets/: README.md  random_sentence_small.txt  random_sentence_tiny.txt
okareo_tests/prompts/: frustrated_driver.txt
scripts/: preprocess_openapi.py
search/: search_index.json
src/okareo/: __init__.py  allure_reporter.py  async_utils.py  augmentations.py  autogen_logger.py  callbacks.py  checks.py  client.py  common.py  crewai_logger.py  custom_api.py  error.py  litellm_logger.py  metrics.py  model_under_test.py  okareo.py  reporter.py  voice.py
src/okareo/okareo_api_client/models/: __init__.py  generation_payload.py  generation_response.py
src/okareo_api_client/: __init__.py  api_config.py
src/okareo_api_client/api/analytics/: get_analytics_meta_v0_analytics_meta_get.py  post_analytics_query_v0_analytics_query_post.py
src/okareo_api_client/models/: DatapointList.py  DatapointListItem.py  DatapointResponse.py  DatapointSchema.py  DatapointSearch.py  GenerationList.py  GenerationPayload.py  GenerationResponse.py  HTTPValidationError.py  ModelUnderTestResponse.py  ModelUnderTestSchema.py  ProjectResponse.py  ProjectSchema.py  ScenarioDataPoinResponse.py  ScenarioSetCreate.py  ScenarioSetResponse.py  SeedData.py  __init__.py  add_model_to_group_v0_groups_group_id_models_post_response_add_model_to_group_v0_groups_group_id_models_post.py  analytics_filter.py  analytics_meta_response.py  analytics_meta_response_cubes.py  analytics_query_request.py  analytics_query_request_order.py  analytics_query_request_order_additional_property.py  analytics_query_response.py  analytics_query_response_data_item.py  assistant_end_thread_request.py  assistant_end_thread_response.py  assistant_message_request.py  assistant_message_response.py  assistant_thread_response.py  body_check_delete_v0_check_check_id_delete.py  body_check_upload_v0_check_upload_post.py  body_check_upload_v0_evaluator_upload_post.py  body_evaluator_delete_v0_evaluator_evaluator_id_delete.py  body_evaluator_upload_v0_evaluator_upload_post.py  body_oauth_token_v0_custom_endpoint_stub_token_post.py  body_scenario_sets_upload_deprecated_v0_scenario_sets_upload_post.py  body_scenario_sets_upload_v0_scenario_sets_upload_post.py  (+259 more)
src/okareo_api_client/services/: None_service.py  async_None_service.py
tests/: common.py  test_add_datapoint.py  test_client.py  test_metrics.py  test_register_model.py
(+179 files in other folders)
