[tool.poetry]
name = "okareo"
version = "0.0.98"
description = "Python SDK for interacting with Okareo Cloud APIs"
authors = [
    "Okareo <info@okareo.com>",
]
license = "Apache-2.0"
readme = "README.md"

documentation = "https://docs.okareo.com/docs/getting-started/overview"
homepage = "https://okareo.com"
repository = "https://github.com/okareo-ai/okareo-python-sdk"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "okareo", from = "src" },
    { include = "okareo_api_client", from = "src" },
    { include = "okareo_tests", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
httpx = ">=0.23"
types-python-dateutil = "^2.8.19.14"
python-dateutil = "^2.8.2"
attrs = "^23.1.0"
nkeys ="^0.2.0"
nats-py = "^2.4.0"
pynacl = "^1.5.0"
aiohttp = "^3.10.0"
opentelemetry-sdk = ">=1.0.0"
opentelemetry-api = ">=1.0.0"
opentelemetry-instrumentation = ">=0.40b.0"
protobuf = ">=2.6.1"
opentelemetry-proto = ">=1.20.0"
tqdm = "^4.67.1"
pydoc-markdown = "^4.8.2"
pydantic = "^2.11.7"
langchain = {version = "^0.0.321", optional = true}
openai = {version = "^1.20.0", optional = true}
litellm = {version = "^1.29.5", optional = true}
autogen-agentchat = { version = "^0.2.36", optional = true }

[tool.poetry.extras]
langchain = ["langchain", "openai", "litellm"]
autogen = ["autogen-agentchat"]

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-httpx = {version = "0.30.0"}
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"
pytest-timeout = {version = "^2.2.0"}
langchain = {version = "^0.0.321"}
openai = {version = "^1.0.0"}
litellm = {version = "^1.29.5"}
ipykernel = "^6.25.2"
setuptools = "*"
pytest-xdist = "*"

[tool.pydoc-markdown]
loaders = [{ type = "python", search_path = ["src"], modules = ["okareo.model_under_test", "okareo.checks", "okareo.async_utils", "okareo.autogen_logger", "okareo.callbacks", "okareo.crewai_logger", "okareo.litellm_logger", "okareo.okareo", "okareo.reporter"] }]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "docs"
relative_output_path = "python-sdk"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov okareo \
    --cov okareo_tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
[tool.coverage.run]
omit = [
    "src/okareo_api_client/*",
    "src/okareo/crewai_logger.py",
    "src/okareo/autogen_logger.py",
    "okareo_tests/*",
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
exclude = ['src/okareo_api_client']
